<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/settings"
        android:title=""
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/logoff"
        android:title="LOG OFF" />

</menu>

